Project-1-Eskiner/Eskiner Package/main/default/objects/Seller_Inventory__c/Seller_Inventory__c.object-meta.xml
<CustomObject>
    <description>The Sellers current items</description>
    <label>Seller_Inventory</label>
    <nameField>
        <displayFormat>Item # -{0000}</displayFormat>
        <label>Inventory_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seller_Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>