Project-1-Eskiner/Eskiner Package/main/default/objects/Seller_Inventory__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <businessOwnerUser>admin@dex403.57900.com.test466</businessOwnerUser>
    <label>Item Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>