Project-1-Eskiner/Eskiner Package/main/default/objects/Seller_Inventory__c/fields/Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_Price__c</fullName>
    <label>Item Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>