Project-1-Eskiner/Eskiner Package/main/default/objects/Seller_Inventory__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <businessOwnerUser>admin@dex403.57900.com.test466</businessOwnerUser>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom RGB Keyboards</fullName>
            </value>
            <value>
                <fullName>Custom LED Mouses</fullName>
            </value>
            <value>
                <fullName>Custom Computer Case</fullName>
            </value>
            <value>
                <fullName>Custom Iphone Case</fullName>
            </value>
            <value>
                <fullName>Custom PS5 Skin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>