Project-1-Eskiner/Eskiner Package/main/default/objects/Seller_Inventory__c/fields/Sell_Item_Link__c.field-meta.xml
<CustomField>
    <fullName>Sell_Item_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sell Item Link</label>
    <referenceTo>ItemSeller__c</referenceTo>
    <relationshipLabel>Seller_Inventories</relationshipLabel>
    <relationshipName>Seller_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>