Project-1-Eskiner/Eskiner Package/main/default/objects/Seller_Inventory__c/validationRules/Price_Must_Be_Lesser_Than.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Must_Be_Lesser_Than</fullName>
    <active>true</active>
    <errorConditionFormula>Item_Price__c &lt; 1 || Item_Price__c &gt; 999999</errorConditionFormula>
    <errorDisplayField>Item_Price__c</errorDisplayField>
    <errorMessage>The price point is either too large or too small! Must be more than $0 and under $999,999</errorMessage>
</ValidationRule>