Project-1-Eskiner/Eskiner Package/main/default/objects/Seller_Inventory__c/validationRules/String_Length_More_Than_5.validationRule-meta.xml
<ValidationRule>
    <fullName>String_Length_More_Than_5</fullName>
    <active>true</active>
    <description>The string length of inputted names must be more than five characters</description>
    <errorConditionFormula>LEN(Item_Name__c) &lt; 5</errorConditionFormula>
    <errorDisplayField>Item_Name__c</errorDisplayField>
    <errorMessage>Sorry but the name you inputted was too short! Please enter one greater than 5 characters</errorMessage>
</ValidationRule>